# MolecularTypeClassifier

./: Dockerfile  Format.to.SMILES.ipynb  README.md  RandomForest_molecularClassification.ipynb  analysis.ipynb  config.yaml  pyproject.toml
.cursor/rules/: amodal-shared.mdc
.ipynb_checkpoints/: RandomForest_molecularClassification-checkpoint.ipynb  glyles_output-checkpoint.txt
src/template/: hello_world.py
