[project]
authors = [{name = "Nate Russell", email = "nrussell@flagshippioneering.com"}]
dependencies = []
name = "template"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
template = { path = ".", editable = true }
mol-utils = { path = "../mol-utils", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
loguru = ">=0.7.3,<0.8"
tqdm = ">=4.67.1,<5"
pytest = ">=9.0.0,<10"
rdkit = ">=2025.9.2,<2026"


