[project]
authors = [{name = "Nate Russell", email = "nrussell@flagshippioneering.com"}]
dependencies = []
name = "template"
requires-python = ">= 3.11"
version = "0.1.0"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
template = { path = ".", editable = true }
mol-utils = { path = "../mol-utils", editable = true }


[tool.pixi.tasks]

[tool.pixi.dependencies]
loguru = ">=0.7.3,<0.8"
tqdm = ">=4.67.1,<5"
pytest = ">=9.0.0,<10"
rdkit = ">=2025.9.2,<2026"
openpyxl = ">=3.1.5,<4"
ipykernel = ">=7.1.0,<8"
jupyter = ">=1.1.1,<2"
seaborn = ">=0.13.2,<0.14"
pyarrow = ">=22.0.0,<23"
fastparquet = ">=2024.11.0,<2025"
retry = ">=0.9.2,<0.10"
tenacity = ">=9.1.2,<10"
requests = ">=2.32.5,<3"
cirpy = ">=1.0.2,<2"
conda = ">=25.9.1,<26"
parallel = ">=20250822,<20250823"
joblib = ">=1.5.2,<2"
umap-learn = ">=0.5.9.post2,<0.6"

